# aggregate_generator

./: CMakeLists.txt  LICENCE.txt  LICENSE  Makefile  README.md  README.txt  aggregate_gen.hpp  aggregate_gen_CCA.cpp  aggregate_gen_CCA.hpp  aggregate_gen_SA.cpp  aggregate_gen_SA.hpp  aggregate_gen_main.cpp
